# easycoder.github.io

./: .eslintrc.json  .gitignore  AGENTS.md  AboutEasyCoder.md  CLAUDE.md  DemoWebsite.md  Example.md  LowCode.md  README.md  RELEASE_NOTES.md  TODO.md  agent-primer-js.md  agent-primer-python.md  ai-article.html  build  build-easycoder  chat.html  codex.html  content  developer.md  done.md  dst-test.html  easycoder.md  ecedit.html  ectest.js  general-agent-primer.md  imageswitcher.html  index.html  index_html  manifest.json  mapintel-agent-primer.md  mapintel-primer.html  package-lock.json  package.json  plugins-sample.js  primer.html  primer.md  primer.sync-conflict-20260321-145644-ZAHA2DV.html  project.html  project.json  (+12 more)
AI/: README.md  (+11 more)
easycoder-py/: .gitignore  README.md  RELEASE_NOTES.md  basic.py  easycoder.tmLanguage.json  flash.py  mailtest.ecs  mqtt_listen.py  mqtt_publish.py  mqtt_test.html  pyproject.toml  test.py  testController.py  testDoclets.py  testServer.py  test_debug_graphics.py  test_debug_launch.py  test_init_debug.py  test_initializers.py  test_mqtt_listener.py  test_mqtt_publisher.py  testdbg.py  testg.py  testgetconfig.py  testmodules.py  testmqtt.py  testnewui.py  testrbr.py  testrc.py  testrmain.py  tests.py  testsql.py  testui.py
easycoder-py/.github/: copilot-instructions.md
easycoder-py/AI/: EXAMPLES.md
easycoder-py/conformance/: README.md  actuals-python-cli.json  ec_py_runner.py  parity-report-template.json  parity-report.generated.json  plugin-interface-matrix.json  run_conformance.py
easycoder-py/doc/: README.md  RESERVED_STEMS.md
(+1110 files in other folders)
